expansion and collapse of menu dynamically resizes window accordingly

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<div id="app-container" class="container-fluid">
+  {{#application/main-container
+    id="app-inner-container"
+    class="row"
+  }}
+    {{outlet}}
+  {{/application/main-container}}
+</div>
+
+
