add footer block

--- a/app/templates/components/application/main-container.hbs
+++ b/app/templates/components/application/main-container.hbs
@@ -5,3 +5,7 @@
 <div id="app-body" class={{bodyClass}}>
   {{yield}}
 </div>
+{{application/footer-container
+  id="footer-container"
+  class=footerClass
+}}
