some smoother transitions for expanding and collapsing the side menu

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,17 @@
 Stuff
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
