--- a/app/styles/_container.scss
+++ b/app/styles/_container.scss
@@ -17,10 +17,15 @@ html {
       #app-body {
         height: 100%;
         background: #ccbbee;
+        overflow: auto;
       }
 
       .body-padding {
         padding-left: 7%;
+        -webkit-transition: all 0.5s ease;
+           -moz-transition: all 0.5s ease;
+             -o-transition: all 0.5s ease;
+                transition: all 0.5s ease;
       }
     }
   }
