--- a/app/styles/footer/_rightbar.scss
+++ b/app/styles/footer/_rightbar.scss
@@ -1,20 +1,9 @@
-#header-container {
-  background-color: #eeffee;
+#footer-container {
   height: 100%;
+  background: #ff88aa;
   -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
        -o-transition: all 0.5s ease;
           transition: all 0.5s ease;
 
-  p {
-    color: blue;
-  }
-}
-
-.is-collapsed {
-  width: 5%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
 }
