--- a/app/styles/_container.scss
+++ b/app/styles/_container.scss
@@ -18,14 +18,18 @@ html {
         height: 100%;
         background: #ccbbee;
         overflow: auto;
-      }
-
-      .body-padding {
-        padding-left: 7%;
         -webkit-transition: all 0.5s ease;
            -moz-transition: all 0.5s ease;
              -o-transition: all 0.5s ease;
                 transition: all 0.5s ease;
+      }
+
+      .menu-collapsed {
+        padding-left: 7%;
+      }
+
+      .menu-expanded {
+        padding-left: 25%;
       }
     }
   }
