--- a/app/styles/header/_sidebar.scss
+++ b/app/styles/header/_sidebar.scss
@@ -1,20 +1,24 @@
 #header-container {
   background-color: #eeffee;
   height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
        -o-transition: all 0.5s ease;
           transition: all 0.5s ease;
+  z-index: 5;
 
   p {
     color: blue;
   }
 }
 
+.is-expanded {
+  width: 24%;
+}
+
 .is-collapsed {
   width: 5%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
 }
