--- a/app/templates/components/application/header-container.hbs
+++ b/app/templates/components/application/header-container.hbs
@@ -1,3 +1,33 @@
+<header id="app-header" class="row">
+{{#if isExpanded}}
+  <div id="profile-background">
+    <img id="profile-background-img" src="assets/images/Personal-Logo.jpg" />
+  </div>
+  <div id="profile-container" class="col-xs-12 col-sm-12 col-md-12">
+    <img id="profile-img" src="assets/images/Profile.jpg" />
+  </div>
+  <div id="profile-banner" class="col-xs-12 col-sm-12 col-md-12">
+    <h1>C h a r l i e . T r a n</h1>
+    <h3>Software Engineer</h3>
+  </div>
+  <div id="profile-icons" class="col-xs-12 col-sm-12 col-md-12">
+    <a href="https://www.linkedin.com/in/charlie-tran" class="profile-icon">
+      <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
+    </a>
+    <a href="https://github.com/cptran777" class="profile-icon">
+      <i class="fa fa-github-square fa-5x" aria-hidden="true"></i>
+    </a>
+  </div>
+{{else}}
+  <a href="https://www.linkedin.com/in/charlie-tran" class="profile-icon">
+    <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
+  </a>
+  <a href="https://github.com/cptran777" class="profile-icon">
+    <i class="fa fa-github-square fa-5x" aria-hidden="true"></i>
+  </a>
+{{/if}}
+
 <p>Hello world!</p>
 {{yield}}
 <button {{action "testAction"}}>Test</button>
+</header>
