added future routes to prepare for nav bar linking

--- a/app/templates/components/application/header-container.hbs
+++ b/app/templates/components/application/header-container.hbs
@@ -4,7 +4,7 @@
     <img id="profile-background-img" src="assets/images/Personal-Logo.jpg" />
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12">
-    <i class="fa fa-angle-double-left fa-2x pull-right toggle-menu" 
+    <i class="fa fa-angle-double-left fa-2x pull-right toggle-menu"
     aria-hidden="true" {{action "onCollapse"}}></i>
   </div>
   <div id="profile-container" class="col-xs-12 col-sm-12 col-md-12">
@@ -22,9 +22,12 @@
       <i class="fa fa-github-square fa-5x" aria-hidden="true"></i>
     </a>
   </div>
+  <div id="profil-nav" class="col-xs-12 col-sm-12 col-md-12">
+
+  </div>
 {{else}}
   <i class="fa fa-angle-double-right fa-2x pull-right toggle-menu"
-  aria-hidden="true" {{action "onExpand"}}></i> 
+  aria-hidden="true" {{action "onExpand"}}></i>
   <a href="https://www.linkedin.com/in/charlie-tran" class="profile-icon">
     <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i>
   </a>
