add the route didtransition functions that will change the current route on the service

--- a/app/templates/components/application/header-container.hbs
+++ b/app/templates/components/application/header-container.hbs
@@ -23,8 +23,7 @@
     </a>
   </div>
   <div id="profil-nav" class="col-xs-12 col-sm-12 col-md-12">
-
-
+    selected route: {{selectedRoute}}
   </div>
 {{else}}
   <i class="fa fa-angle-double-right fa-2x pull-right toggle-menu"
