add logo icon to be used

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,7 @@
   {{#application/main-container
     id="app-inner-container"
     class="row"
+    goToRoute=(route-action "goToRoute")
   }}
     {{outlet}}
   {{/application/main-container}}
