--- a/app/templates/components/application/main-container.hbs
+++ b/app/templates/components/application/main-container.hbs
@@ -1,5 +1,6 @@
 {{application/header-container
   id="header-container"
+  goToRoute=(action "goToRoute")
   toggleSidebar=(action "toggleSidebar")
 }}
 <div id="app-body" class={{bodyClass}}>
