--- a/app/styles/header/_sidebar.scss
+++ b/app/styles/header/_sidebar.scss
@@ -17,6 +17,7 @@
   header {
     height: 100%;
     text-align: center;
+    padding-bottom: 5%;
 
     a.profile-icon {
       color: $secondary-color;
@@ -80,10 +81,39 @@
         margin: 1% 3% 1% 3%;
       }
     }
-  }
 
-  p {
-    color: blue;
+    #profile-nav {
+      nav {
+        padding: 0 10% 0 10%;
+
+        .nav-link {
+          border-radius: 10px;
+          background-color: $secondary-color;
+          text-align: center;
+          margin: 1% 0 1% 0;
+          font-weight: bold;
+          color: white;
+        }
+
+        .nav-link:hover {
+          cursor: pointer;
+          background-color: $secondary-color-hover;
+        }
+
+        .nav-link.selected {
+          background-color: white;
+          color: $primary-color;
+        }
+      }
+    }
+
+    #profile-sidebar-logo {
+      width: 75%;
+    }
+
+    #profile-sidebar-logo:hover {
+      cursor: pointer;
+    }
   }
 }
 
