new icons for the sidebar

--- a/app/templates/components/application/header-container.hbs
+++ b/app/templates/components/application/header-container.hbs
@@ -42,5 +42,11 @@
   <a href="https://github.com/cptran777" class="profile-icon">
     <i class="fa fa-github-square fa-4x" aria-hidden="true"></i>
   </a>
+  {{#link-to "portfolio" class="profile-icon"}}
+    <i class="fa fa-laptop fa-4x" aria-hidden="true"></i>
+  {{/link-to}}
+  {{#link-to "interests" class="profile-icon"}}
+    <i class="fa fa-gamepad fa-4x" aria-hidden="true"></i>
+  {{/link-to}}
 {{/if}}
 </header>
