create responsive header to the navbar expansion

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,3 +1,5 @@
 $primary-color: #151a28;
 $secondary-color: #81d2ff;
 $secondary-color-hover: #a8f2ff;
+$primary-bright-color: #c2cdea;
+$secondary-bright-color: #c2e7fc;
