--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,17 +1,4 @@
-Stuff
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
-<p> Stuff stuff stuff stuff stuff stuff stuff stuff </p>
+{{index/main-container
+  id="index-container"
+  class="row"
+}}
