--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -3,3 +3,10 @@ $secondary-color: #81d2ff;
 $secondary-color-hover: #a8f2ff;
 $primary-bright-color: #c2cdea;
 $secondary-bright-color: #c2e7fc;
+
+@mixin smooth-transitions($time) {
+  -webkit-transition: all $time ease;
+     -moz-transition: all $time ease;
+       -o-transition: all $time ease;
+          transition: all $time ease;
+}
