--- a/app/styles/footer/_rightbar.scss
+++ b/app/styles/footer/_rightbar.scss
@@ -1,10 +1,7 @@
 @import '../variables';
 
 #footer-container {
+  @include smooth-transitions(0.5s);
   height: 100%;
-  -webkit-transition: all 0.5s ease;
-     -moz-transition: all 0.5s ease;
-       -o-transition: all 0.5s ease;
-          transition: all 0.5s ease;
   background-color: $primary-bright-color;
 }
