--- a/app/styles/header/_sidebar.scss
+++ b/app/styles/header/_sidebar.scss
@@ -1,16 +1,13 @@
 @import '../variables';
 
 #header-container {
+  @include smooth-transitions(0.5s);
   background-color: $primary-color;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   overflow: auto;
-  -webkit-transition: all 0.5s ease;
-     -moz-transition: all 0.5s ease;
-       -o-transition: all 0.5s ease;
-          transition: all 0.5s ease;
   z-index: 5;
   padding: 0 15px 0 15px;
 
