--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -1,6 +1,7 @@
 {{index/page-header
   id="index-page-header"
   class=pageHeaderClass
+  onChangeCover=(action "onChangeCover")
 }}
 <h2>Header of stuff</h2>
 <p>Stuff stuff stuff stuff stuff stuff</p>
