--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -3,6 +3,7 @@ $secondary-color: #81d2ff;
 $secondary-color-hover: #a8f2ff;
 $primary-bright-color: #c2cdea;
 $secondary-bright-color: #c2e7fc;
+$primary-grey-color: #cccdce;
 
 @mixin smooth-transitions($time) {
   -webkit-transition: all $time ease;
