--- a/app/styles/_container.scss
+++ b/app/styles/_container.scss
@@ -18,7 +18,6 @@ html {
       #app-body {
         @include smooth-transitions(0.5s);
         height: 100%;
-        background: #ccbbee;
         overflow: auto;
       }
 
@@ -27,8 +26,12 @@ html {
       }
 
       .menu-expanded {
-        padding-left: 25%;
+        padding-left: 26%;
       }
     }
+  }
+
+  .hide {
+    display: hide;
   }
 }
