generate message in chatterbox service now creates new users and assigns them a permanent random color dynamically

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -11,3 +11,8 @@ $primary-grey-color: #cccdce;
        -o-transition: all $time ease;
           transition: all $time ease;
 }
+
+@mixin slight-padding($amount) {
+  padding-left: $amount;
+  padding-top: $amount;
+}
