--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -3,10 +3,12 @@
   class=pageHeaderClass
   onChangeCover=(action "onChangeCover")
 }}
-<h2>Header of stuff</h2>
-<p>Stuff stuff stuff stuff stuff stuff</p>
-<p>Stuff stuff stuff stuff stuff stuff</p>
-<p>Stuff stuff stuff stuff stuff stuff</p>
-<p>Stuff stuff stuff stuff stuff stuff</p>
-<p>Stuff stuff stuff stuff stuff stuff</p>
-<p>Stuff stuff stuff stuff stuff stuff</p>
+<div id="game-window" class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
+  Game window here
+  <canvas id="syruptale"></canvas>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-12">
+  <div class="row">
+
+  </div>
+</div>
