--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -7,8 +7,25 @@
   Game window here
   <canvas id="syruptale"></canvas>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12">
+<div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
   <div class="row">
-
+    <div class="col-xs-3 col-sm-3 col-md-2 game-image-container">
+      <img class="game-image" src="assets/images/Syrup.png" />
+    </div>
+    <div class="col-xs-9 col-sm-9 col-md-10 game-info-container">
+      <div class="row">
+        This was a game built as part of a project to build an mvp in one day.
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-3">
+          <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i>
+          <span class="detail-content">Syrup Tale</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row"><div class="col-md-10 col-md-offset-1 border-separator"></div></div>
+  <div class="row">
+    Bottom Content
   </div>
 </div>
