working on portfolio site again

--- a/app/templates/components/application/main-container.hbs
+++ b/app/templates/components/application/main-container.hbs
@@ -3,7 +3,7 @@
   goToRoute=(action "goToRoute")
   toggleSidebar=(action "toggleSidebar")
 }}
-<div id="app-body" class={{bodyClass}}>
+<div id="app-body" class="container-fluid {{bodyClass}}">
   {{yield}}
 </div>
 {{application/footer-container
