--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="col-xs-9 col-sm-9 col-md-10 game-info-container">
       <div class="row">
-        This was a game built as part of a project to build an mvp in one day.
+        Line Placeholder
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3">
@@ -28,4 +28,7 @@
   <div class="row">
     Bottom Content
   </div>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
+  
 </div>
