--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -4,7 +4,6 @@
   onChangeCover=(action "onChangeCover")
 }}
 <div id="game-window" class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
-  Game window here
   <canvas id="syruptale"></canvas>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
@@ -14,7 +13,7 @@
     </div>
     <div class="col-xs-9 col-sm-9 col-md-10 game-info-container">
       <div class="row">
-        Line Placeholder
+        Portfolio Site
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3">
@@ -24,11 +23,18 @@
       </div>
     </div>
   </div>
-  <div class="row"><div class="col-md-10 col-md-offset-1 border-separator"></div></div>
-  <div class="row">
-    Bottom Content
-  </div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
+  <h3>Summary About Me</h3>
+  <div class="row border-separator"></div>
+    I'm an engineer and a gamer, and I love combining these two passions to deliver fun and unique user experiences. I have a strong 
+    background in JavaScript, with some knowledge in other programming languages, including Python and C#. I've worked on the full stack
+    of data-driven applications, multiplayer virtual reality gaming, video streaming, mobile social media, and more. I love soliving puzzles,
+    puzzling algorithms, and, outside of the "programming job" I enjoy exploring AI and machine learning, virtual/augmented reality, and
+    game development. 
+</div>
+<div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
+  <h3>Skills</h3>
+  <div class="row border-separator"></div>
   
 </div>
