--- a/app/templates/components/index/page-header.hbs
+++ b/app/templates/components/index/page-header.hbs
@@ -6,13 +6,13 @@
     <img id="navbar-img" src="assets/images/Navbar-Image.jpg" />
   </div>
   <div class="col-xs-12 col-sm-3 col-md-3 banner-title-container">
-    About Me
+    <span>About Me</span>
   </div>
   <div class="col-xs-12 col-sm-3 col-md-3 banner-title-container">
-    Testing
+    <span>Testing</span>
   </div>
   <div class="col-xs-12 col-sm-3 col-md-3 banner-title-container">
-    Testing
+    <span>Testing</span>
   </div>
 </div>
 
