--- a/app/styles/body/index/_route.scss
+++ b/app/styles/body/index/_route.scss
@@ -26,17 +26,29 @@
         padding-bottom: 5px;
         border-bottom: 5px solid $primary-color;
         cursor: pointer;
+
+        &:hover {
+          border-bottom: 6px solid $secondary-color-hover;
+        }
       }
 
       .banner-title-container {
         margin-top: 10px;
         padding-top: 15px;
         padding-top: 10px;
-        text-decoration: underline;
         font-weight: bold;
         border-right: 1px solid $primary-grey-color;
         text-align: center;
-        cursor: default;
+
+        span {
+          cursor: pointer;
+          border-bottom: 1px solid $primary-color;
+        }
+
+        span:hover {
+          color: $secondary-color-hover;
+          border-bottom: 3px solid $secondary-color-hover;
+        }
       }
 
       .banner-img {
@@ -82,6 +94,8 @@
   #game-window {
     height: 50vh;
     background-color: $secondary-bright-color;
+    background-image: url("/assets/images/Game-Window-Image.jpg");
+    background-size: 100% 100%;
   }
 
   .detail-card {
