--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -27,14 +27,10 @@
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
   <h3>Summary About Me</h3>
   <div class="row border-separator"></div>
-    I'm an engineer and a gamer, and I love combining these two passions to deliver fun and unique user experiences. I have a strong 
-    background in JavaScript, with some knowledge in other programming languages, including Python and C#. I've worked on the full stack
-    of data-driven applications, multiplayer virtual reality gaming, video streaming, mobile social media, and more. I love soliving puzzles,
-    puzzling algorithms, and, outside of the "programming job" I enjoy exploring AI and machine learning, virtual/augmented reality, and
-    game development. 
+    {{index/partials/summary-content}}
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
   <h3>Skills</h3>
   <div class="row border-separator"></div>
-  
+  {{index/partials/skills-content class="row"}}
 </div>
