--- a/app/templates/components/index/partials/summary-content.hbs
+++ b/app/templates/components/index/partials/summary-content.hbs
@@ -1,12 +1,7 @@
-Charlie Tran, software engineer. I love working to design and deliver a user experience that is
-fun and memorable. I have a strong background in JavaScript and experience developing connected
-applications. I've worked full stack on teams to develop enterprise applications, multiplayer
-virtual reality gaming, video streaming, social media, data visualization applications, and 
-more. I love solving puzzles and puzzling algorithms, and outside of the "programming job" I still
-enjoy exploring the latest developments in artificial intelligence and machine learning, virtual
-reality, and game development.
-
-My personal dream is to one day see a connected virtual world where people can enjoy immersive
-experiences together in games, movies, music, and more.
+I'm an engineer and a gamer, and I love combining these two passions to deliver fun and unique user experiences. I have a strong 
+background in JavaScript, with some knowledge in other programming languages, including Python and C#. I've worked on the full stack
+of data-driven applications, multiplayer virtual reality gaming, video streaming, mobile social media, and more. I love soliving puzzles,
+puzzling algorithms, and, outside of the "programming job" I enjoy exploring AI and machine learning, virtual/augmented reality, and
+game development. 
 
 {{yield}}
