restyle window headers for each element in the index and also give images max width so they don't go crazy with size adjustments

--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -25,12 +25,19 @@
   </div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
-  <h3>Summary About Me</h3>
-  <div class="row border-separator"></div>
+  <div class="row detail-card__banner">
+    <h3>Summary About Me</h3>
+  </div>
     {{index/partials/summary-content}}
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
-  <h3>Skills</h3>
-  <div class="row border-separator"></div>
+  <div class="row detail-card__banner">
+    <h3>Skills</h3>
+  </div>
   {{index/partials/skills-content class="row"}}
+</div>
+<div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
+  <div class="row detail-card__banner">
+    <h3>Currently Working On</h3>
+  </div>
 </div>
