--- a/app/styles/body/index/_route.scss
+++ b/app/styles/body/index/_route.scss
@@ -101,8 +101,8 @@
   .detail-card {
     margin-top: 1%;
     border: 1px solid $primary-bright-color;
-    padding-top: 8px;
     padding-bottom: 8px;
+    margin-bottom: 16px;
 
     .detail-content {
       color: $secondary-color;
@@ -119,6 +119,16 @@
       padding: 10px 5px;
     }
 
+    &__banner {
+      background-color: $primary-color;
+      padding: 8px 25px;
+      margin-bottom: 8px;
+
+      h3 {
+        color: $primary-bright-color;
+      }
+    }
+
     &__mini-card-container {
       height: 85px;
       padding: 0px 16px;
@@ -128,6 +138,7 @@
 
       img {
         width: 50%;
+        max-width: 70px;
       }  
 
       .mini-card {
