add logic to reuse the skills content file for the currently working on file

--- a/app/templates/components/index/main-container.hbs
+++ b/app/templates/components/index/main-container.hbs
@@ -4,6 +4,7 @@
   onChangeCover=(action "onChangeCover")
 }}
 <div id="game-window" class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
+  <h1>COMING SOON</h1>
   <canvas id="syruptale"></canvas>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 detail-card">
@@ -40,4 +41,5 @@
   <div class="row detail-card__banner">
     <h3>Currently Working On</h3>
   </div>
+  {{index/partials/skills-content class="row" content="currentWorking"}}
 </div>
