--- a/app/styles/body/index/_route.scss
+++ b/app/styles/body/index/_route.scss
@@ -96,6 +96,10 @@
     background-color: $secondary-bright-color;
     background-image: url("/assets/images/Game-Window-Image.jpg");
     background-size: 100% 100%;
+
+    h1 {
+      color: $primary-bright-color;
+    }
   }
 
   .detail-card {
