--- a/app/templates/components/interests/main-container.hbs
+++ b/app/templates/components/interests/main-container.hbs
@@ -1,1 +1,11 @@
+<div class="col-md-12 card-set-title">
+
+</div>
+
+{{interests/reusable/info-card}}
+{{interests/reusable/info-card}}
+{{interests/reusable/info-card}}
+{{interests/reusable/info-card}}
+{{interests/reusable/info-card}}
+
 {{yield}}
