--- a/app/styles/body/interests/_route.scss
+++ b/app/styles/body/interests/_route.scss
@@ -34,8 +34,11 @@
 
         .info-card__card {
           &__picture {
-            width: 100%;
             height: 130px;
+
+            &--expanded {
+              width: 100%;
+            }
           }
 
           &__details {
@@ -58,8 +61,11 @@
 
           &__picture {
             float: left;
-            width: 30%;
             height: 293px;
+
+            &--expanded {
+              width: 30%;
+            }
           }
 
           &__details {
@@ -85,6 +91,15 @@
       }
 
       &__picture {
+        @include smooth-transitions(1s);
+        &--hidden {
+          display: none;
+        }
+
+        &--shown {
+          width: 0;
+        }
+
         img {
           width: 100%;
           height: 100%;
