--- a/app/templates/components/interests/reusable/info-card.hbs
+++ b/app/templates/components/interests/reusable/info-card.hbs
@@ -2,7 +2,7 @@
   <div class="info-card__card__header">
     <h3>{{infoHeader}}</h3>
   </div>
-  <div class="info-card__card__picture">
+  <div class="info-card__card__picture info-card__card__picture--{{if showImage "shown" "hidden"}} {{if expandImage "info-card__card__picture--expanded"}}">
     <img src="assets/images/Cover-Image.jpg" />
   </div>
   <div class="info-card__card__details">
